--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /Assets/Plugins/RootMotion/FinalIK/_Integration/
 /OVRAssetBundles/OVRMasterBundle/
 /Assets/Plugins/GitHub
+/Assets/Resources/FileMultimediali/
 
 # UniGit specific. You can remove to save changes to UniGit in version control
 
