--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /Assets/Plugins/GitHub
 /Assets/Resources/FileMultimediali/
 /Assets/UMA/
+/Assets/Resources/AugmentedObject/3D/
 
 # UniGit specific. You can remove to save changes to UniGit in version control
 
